# jsk_aerial_robot

aerial_robot_base/scripts/: keyboard_command.py
aerial_robot_control/include/aerial_robot_control/: flight_navigation.h
aerial_robot_control/src/: flight_navigation.cpp
aerial_robot_estimation/src/sensor/: imu.cpp
aerial_robot_model/launch/: aerial_robot_model.launch
aerial_robot_msgs/: CMakeLists.txt
aerial_robot_msgs/msg/: SimpleFlightNav.msg
aerial_robot_simulation/gazebo_model/world/: inclined_wall_hole.world  pillars.world  wall.world  wall_hole.world
camera/: CMakeLists.txt  package.xml
camera/config/: calibration_info.yaml  tarcking_control.yaml
camera/launch/: camera_for_calibration.launch  camera_image_process.launch  get_target.launch  get_target_circle.launch  get_target_edge.launch  image_processing.launch  mask.launch  optical_flow_tracker.launch  pc_camera.launch
camera/src/: camera_red_detection.py  check_image.py  circle_detection.py  color_judge.py  edge_detection.py  feature_track.py  generate_mask_from_file.py  get_points.py  line_detection.py  line_detection_random.py  mask.py  optical_flow.py  optical_flow_feature.py  optical_flow_point.py  red_detection.py  test_line.py  tracker.py
robots/beetle/: CMakeLists.txt
robots/beetle/launch/: bringup.launch
robots/beetle/script/: keyboard_command_multi.py
robots/beetle/src/: beetle_navigation.cpp
robots/beetle/urdf/: valve.urdf
robots/gimbalrotor/: CMakeLists.txt
robots/gimbalrotor/config/: MotorInfo.yaml  NavigationConfig.yaml  tags.yaml
(+75 files in other folders)
